--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     -   id: forbid-new-submodules
     -   id: mixed-line-ending
     -   id: name-tests-test
-    -   id: no-commit-to-branch
+    # -   id: no-commit-to-branch
     -   id: pyflakes
     -   id: pretty-format-json
     -   id: requirements-txt-fixer
